[gd_scene load_steps=2 format=3 uid="uid://bujgf1ym2asal"]

[ext_resource type="Script" path="res://scenes/ui/ImageNodePropertyEditor/ImageNodePropertyEditor.gd" id="1_kmjym"]

[node name="ImageNodePropertiesList" type="GridContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
script = ExtResource("1_kmjym")

[node name="Label3" type="Label" parent="."]
layout_mode = 2
text = "Label: "

[node name="UserLabelLineEdit" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "User-definable label for this sprinkler"

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Width: "

[node name="WidthSpinBox" type="SpinBox" parent="."]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Total spray angle or rotor's swept angle"
max_value = 10000.0
step = 0.001
suffix = "ft"

[node name="Label2" type="Label" parent="."]
layout_mode = 2
text = "Height: "

[node name="HeightSpinBox" type="SpinBox" parent="."]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Total spray angle or rotor's swept angle"
max_value = 10000.0
step = 0.001
suffix = "ft"

[connection signal="text_submitted" from="UserLabelLineEdit" to="." method="_on_user_label_line_edit_text_submitted"]
[connection signal="value_changed" from="WidthSpinBox" to="." method="_on_width_spin_box_value_changed"]
[connection signal="value_changed" from="HeightSpinBox" to="." method="_on_height_spin_box_value_changed"]
